query and path variables implementation for testing
