# modules/headless-PhoneBook/headless-PhoneBook-impl/rest-openapi.yaml
@@ -58,7 +58,13 @@ components:
           description: The department name.
           type: string
       type: object
-
+    Test:
+      description: its test component
+      type: object
+      properties:
+        text:
+          type: string
+          description: represent a test text.
     Part:
       description: Contains all of the data for a single part.
       properties:
@@ -200,23 +206,20 @@ paths:
               schema:
                 $ref: "#/components/schemas/Person"
     put:
-      operationId: putPerson
+      operationId: putPersonAPI
       tags: [ "Person" ]
       description: Replaces the person with the information sent in the request body. Any missing fields are deleted, unless they are required.
       parameters:
         - name: personId
           in: path
-          required: true
           schema:
             type: string
         - in: query
-          required: true
           name: roleId
           schema:
             format: int64
             type: integer
         - in: query
-          required: true
           name: departmentId
           schema:
             format: int64
@@ -240,23 +243,20 @@ paths:
               schema:
                 $ref: "#/components/schemas/Person"
     patch:
-      operationId: patchPerson
+      operationId: patchPersonAPI
       tags: [ "Person" ]
       description: Replaces the person with the information sent in the request body. Any missing fields are deleted, unless they are required.
       parameters:
         - name: personId
           in: path
-          required: true
           schema:
             type: string
         - in: query
-          required: true
           name: roleId
           schema:
             format: int64
             type: integer
         - in: query
-          required: true
           name: departmentId
           schema:
             format: int64
@@ -916,3 +916,29 @@ paths:
           content:
             application/json: { }
             application/xml: { }
+  "/test/{pathParam}":
+    get:
+      summary: getTest
+      operationId: test
+      parameters:
+        - in: path
+          name: pathParam
+          required: true
+          schema:
+            type: string
+        - in: query
+          name: queryParam
+          schema:
+            type: string
+          required: false
+      responses:
+        200:
+          description: get test response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Test'
+            application/xml:
+              schema:
+                $ref: '#/components/schemas/Test'
+      tags: ["Test"]
